# advisor-ai-platform

./: .editorconfig  .gitattributes  .gitignore  README.md  index.html
backend/ai-gateway/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/ai-gateway/migrations/: 20260503_001_create_token_usage_records.sql  20260503_002_create_tenants.sql  20260503_003_create_audit_logs.sql
backend/ai-gateway/src/: config.rs  main.rs
backend/ai-gateway/src/application/: mod.rs
backend/ai-gateway/src/application/chat/: ChatAppService.rs  ChatAppServiceImpl.rs  ChatService.rs  mod.rs
backend/ai-gateway/src/bootstrap/: App.rs  build_app.rs  mod.rs
backend/ai-gateway/src/domain/: mod.rs
backend/ai-gateway/src/domain/core/: mod.rs
backend/ai-gateway/src/domain/core/gateway_orchestration/: ChatGateway.rs  CompletionRequest.rs  CompletionResult.rs  Message.rs  (+1 more)
backend/ai-gateway/src/domain/generic/: mod.rs
backend/ai-gateway/src/domain/supporting/: mod.rs
backend/ai-gateway/src/infrastructure/: mod.rs
backend/ai-gateway/src/infrastructure/dao/: mod.rs
backend/ai-gateway/src/infrastructure/http/: AppState.rs  build_router.rs  mod.rs
backend/ai-gateway/src/infrastructure/provider/: DefaultProviderRouter.rs  MockChatGateway.rs  OpenAICompatibleGateway.rs  mod.rs
backend/ai-gateway/src/interfaces/http/: chat_completions.rs  chat_stream.rs  health.rs  mod.rs
backend/ai-gateway/src/shared/: json_extractor.rs  mod.rs  response.rs  token_estimator.rs  validator.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
(+768 files in other folders)
