[package]
name = "advisor-ai-platform-ui"
version = "0.1.0"
description = "Advisor AI Platform Tauri Client"
authors = ["advisor-ai"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rand = "0.8"
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
